@@ -39,13 +39,14 @@ import org.elasticsearch.action.update.UpdateRequest;
 import org.elasticsearch.client.Requests;
 import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.common.xcontent.XContentType;
 import org.elasticsearch.plugins.Plugin;
 import org.elasticsearch.test.ESIntegTestCase;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import static org.elasticsearch.common.xcontent.XContentFactory.jsonBuilder;
@@ -68,7 +69,7 @@ public class IngestClientIT extends ESIntegTestCase {
 
     @Override
     protected Collection<Class<? extends Plugin>> nodePlugins() {
-        return Arrays.asList(IngestTestPlugin.class);
+        return List.of(ExtendedIngestTestPlugin.class);
     }
 
     public void testSimulate() throws Exception {
@@ -120,7 +121,7 @@ public class IngestClientIT extends ESIntegTestCase {
         source.put("foo", "bar");
         source.put("fail", false);
         source.put("processed", true);
-        IngestDocument ingestDocument = new IngestDocument("index", "type", "id", null, null, null, source);
+        IngestDocument ingestDocument = new IngestDocument("index", "id", null, null, null, source);
         assertThat(simulateDocumentBaseResult.getIngestDocument().getSourceAndMetadata(), equalTo(ingestDocument.getSourceAndMetadata()));
         assertThat(simulateDocumentBaseResult.getFailure(), nullValue());
 
@@ -147,7 +148,7 @@ public class IngestClientIT extends ESIntegTestCase {
         int numRequests = scaledRandomIntBetween(32, 128);
         BulkRequest bulkRequest = new BulkRequest();
         for (int i = 0; i < numRequests; i++) {
-            IndexRequest indexRequest = new IndexRequest("index", "type", Integer.toString(i)).setPipeline("_id");
+            IndexRequest indexRequest = new IndexRequest("index").id(Integer.toString(i)).setPipeline("_id");
             indexRequest.source(Requests.INDEX_CONTENT_TYPE, "field", "value", "fail", i % 2 == 0);
             bulkRequest.add(indexRequest);
         }
@@ -191,10 +192,10 @@ public class IngestClientIT extends ESIntegTestCase {
         client().admin().cluster().putPipeline(putPipelineRequest).get();
 
         BulkRequest bulkRequest = new BulkRequest();
-        IndexRequest indexRequest = new IndexRequest("index", "type", "1").setPipeline("_id");
+        IndexRequest indexRequest = new IndexRequest("index").id("1").setPipeline("_id");
         indexRequest.source(Requests.INDEX_CONTENT_TYPE, "field1", "val1");
         bulkRequest.add(indexRequest);
-        UpdateRequest updateRequest = new UpdateRequest("index", "type", "2");
+        UpdateRequest updateRequest = new UpdateRequest("index", "2");
         updateRequest.doc("{}", Requests.INDEX_CONTENT_TYPE);
         updateRequest.upsert("{\"field1\":\"upserted_val\"}", XContentType.JSON).upsertRequest().setPipeline("_id");
         bulkRequest.add(updateRequest);
@@ -202,11 +203,11 @@ public class IngestClientIT extends ESIntegTestCase {
         BulkResponse response = client().bulk(bulkRequest).actionGet();
 
         assertThat(response.getItems().length, equalTo(bulkRequest.requests().size()));
-        Map<String, Object> inserted = client().prepareGet("index", "type", "1")
+        Map<String, Object> inserted = client().prepareGet("index", "1")
             .get().getSourceAsMap();
         assertThat(inserted.get("field1"), equalTo("val1"));
         assertThat(inserted.get("processed"), equalTo(true));
-        Map<String, Object> upserted = client().prepareGet("index", "type", "2")
+        Map<String, Object> upserted = client().prepareGet("index", "2")
             .get().getSourceAsMap();
         assertThat(upserted.get("field1"), equalTo("upserted_val"));
         assertThat(upserted.get("processed"), equalTo(true));
@@ -231,16 +232,16 @@ public class IngestClientIT extends ESIntegTestCase {
         assertThat(getResponse.pipelines().size(), equalTo(1));
         assertThat(getResponse.pipelines().get(0).getId(), equalTo("_id"));
 
-        client().prepareIndex("test", "type", "1").setPipeline("_id").setSource("field", "value", "fail", false).get();
+        client().prepareIndex("test").setId("1").setPipeline("_id").setSource("field", "value", "fail", false).get();
 
-        Map<String, Object> doc = client().prepareGet("test", "type", "1")
+        Map<String, Object> doc = client().prepareGet("test", "1")
                 .get().getSourceAsMap();
         assertThat(doc.get("field"), equalTo("value"));
         assertThat(doc.get("processed"), equalTo(true));
 
         client().prepareBulk().add(
-                client().prepareIndex("test", "type", "2").setSource("field", "value2", "fail", false).setPipeline("_id")).get();
-        doc = client().prepareGet("test", "type", "2").get().getSourceAsMap();
+                client().prepareIndex("test").setId("2").setSource("field", "value2", "fail", false).setPipeline("_id")).get();
+        doc = client().prepareGet("test", "2").get().getSourceAsMap();
         assertThat(doc.get("field"), equalTo("value2"));
         assertThat(doc.get("processed"), equalTo(true));
 
@@ -272,4 +273,178 @@ public class IngestClientIT extends ESIntegTestCase {
         GetPipelineResponse response = client().admin().cluster().prepareGetPipeline("_id2").get();
         assertFalse(response.isFound());
     }
+
+    public void testWithDedicatedMaster() throws Exception {
+        String masterOnlyNode = internalCluster().startMasterOnlyNode();
+        BytesReference source = BytesReference.bytes(jsonBuilder().startObject()
+            .field("description", "my_pipeline")
+            .startArray("processors")
+            .startObject()
+            .startObject("test")
+            .endObject()
+            .endObject()
+            .endArray()
+            .endObject());
+        PutPipelineRequest putPipelineRequest = new PutPipelineRequest("_id", source, XContentType.JSON);
+        client().admin().cluster().putPipeline(putPipelineRequest).get();
+
+        BulkItemResponse item = client(masterOnlyNode).prepareBulk().add(
+            client().prepareIndex("test").setSource("field", "value2", "drop", true).setPipeline("_id")).get()
+            .getItems()[0];
+        assertFalse(item.isFailed());
+        assertEquals("auto-generated", item.getResponse().getId());
+    }
+
+    public void testPipelineOriginHeader() throws Exception {
+        {
+            XContentBuilder source = jsonBuilder().startObject();
+            {
+                source.startArray("processors");
+                source.startObject();
+                {
+                    source.startObject("pipeline");
+                    source.field("name", "2");
+                    source.endObject();
+                }
+                source.endObject();
+                source.endArray();
+            }
+            source.endObject();
+            PutPipelineRequest putPipelineRequest =
+                new PutPipelineRequest("1", BytesReference.bytes(source), XContentType.JSON);
+            client().admin().cluster().putPipeline(putPipelineRequest).get();
+        }
+        {
+            XContentBuilder source = jsonBuilder().startObject();
+            {
+                source.startArray("processors");
+                source.startObject();
+                {
+                    source.startObject("pipeline");
+                    source.field("name", "3");
+                    source.endObject();
+                }
+                source.endObject();
+                source.endArray();
+            }
+            source.endObject();
+            PutPipelineRequest putPipelineRequest =
+                new PutPipelineRequest("2", BytesReference.bytes(source), XContentType.JSON);
+            client().admin().cluster().putPipeline(putPipelineRequest).get();
+        }
+        {
+            XContentBuilder source = jsonBuilder().startObject();
+            {
+                source.startArray("processors");
+                source.startObject();
+                {
+                    source.startObject("fail");
+                    source.endObject();
+                }
+                source.endObject();
+                source.endArray();
+            }
+            source.endObject();
+            PutPipelineRequest putPipelineRequest =
+                new PutPipelineRequest("3", BytesReference.bytes(source), XContentType.JSON);
+            client().admin().cluster().putPipeline(putPipelineRequest).get();
+        }
+
+        Exception e = expectThrows(Exception.class, () -> {
+            IndexRequest indexRequest = new IndexRequest("test");
+            indexRequest.source("{}", XContentType.JSON);
+            indexRequest.setPipeline("1");
+            client().index(indexRequest).get();
+        });
+        IngestProcessorException ingestException = (IngestProcessorException) e.getCause();
+        assertThat(ingestException.getHeader("processor_type"), equalTo(List.of("fail")));
+        assertThat(ingestException.getHeader("pipeline_origin"), equalTo(List.of("3", "2", "1")));
+    }
+
+    public void testPipelineProcessorOnFailure() throws Exception {
+        {
+            XContentBuilder source = jsonBuilder().startObject();
+            {
+                source.startArray("processors");
+                source.startObject();
+                {
+                    source.startObject("pipeline");
+                    source.field("name", "2");
+                    source.endObject();
+                }
+                source.endObject();
+                source.endArray();
+            }
+            {
+                source.startArray("on_failure");
+                source.startObject();
+                {
+                    source.startObject("onfailure_processor");
+                    source.endObject();
+                }
+                source.endObject();
+                source.endArray();
+            }
+            source.endObject();
+            PutPipelineRequest putPipelineRequest =
+                new PutPipelineRequest("1", BytesReference.bytes(source), XContentType.JSON);
+            client().admin().cluster().putPipeline(putPipelineRequest).get();
+        }
+        {
+            XContentBuilder source = jsonBuilder().startObject();
+            {
+                source.startArray("processors");
+                source.startObject();
+                {
+                    source.startObject("pipeline");
+                    source.field("name", "3");
+                    source.endObject();
+                }
+                source.endObject();
+                source.endArray();
+            }
+            source.endObject();
+            PutPipelineRequest putPipelineRequest =
+                new PutPipelineRequest("2", BytesReference.bytes(source), XContentType.JSON);
+            client().admin().cluster().putPipeline(putPipelineRequest).get();
+        }
+        {
+            XContentBuilder source = jsonBuilder().startObject();
+            {
+                source.startArray("processors");
+                source.startObject();
+                {
+                    source.startObject("fail");
+                    source.endObject();
+                }
+                source.endObject();
+                source.endArray();
+            }
+            source.endObject();
+            PutPipelineRequest putPipelineRequest =
+                new PutPipelineRequest("3", BytesReference.bytes(source), XContentType.JSON);
+            client().admin().cluster().putPipeline(putPipelineRequest).get();
+        }
+
+        client().prepareIndex("test").setId("1").setSource("{}", XContentType.JSON).setPipeline("1").get();
+        Map<String, Object> inserted = client().prepareGet("test", "1")
+            .get().getSourceAsMap();
+        assertThat(inserted.get("readme"), equalTo("pipeline with id [3] is a bad pipeline"));
+    }
+
+    public static class ExtendedIngestTestPlugin extends IngestTestPlugin {
+
+        @Override
+        public Map<String, Processor.Factory> getProcessors(Processor.Parameters parameters) {
+            Map<String, Processor.Factory> factories = new HashMap<>(super.getProcessors(parameters));
+            factories.put(PipelineProcessor.TYPE, new PipelineProcessor.Factory(parameters.ingestService));
+            factories.put("fail", (processorFactories, tag, config) -> new TestProcessor(tag, "fail", new RuntimeException()));
+            factories.put("onfailure_processor", (processorFactories, tag, config) -> new TestProcessor(tag, "fail", document -> {
+                String onFailurePipeline = document.getFieldValue("_ingest.on_failure_pipeline", String.class);
+                document.setFieldValue("readme", "pipeline with id [" + onFailurePipeline + "] is a bad pipeline");
+            }));
+            return factories;
+        }
+    }
+
 }
